--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,18 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <!-- Logging -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.14</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.11</version>
+        </dependency>
+
         <!-- Test Dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -117,7 +129,7 @@
                     <configuration>
                         <properties>
                             <cargo.servlet.port>8080</cargo.servlet.port>
-                            <cargo.logging>high</cargo.logging>
+                            <cargo.logging>debug</cargo.logging>
                         </properties>
                     </configuration>
                 </configuration>
