--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
                     <configuration>
                         <properties>
                             <cargo.servlet.port>8080</cargo.servlet.port>
-                            <cargo.logging>debug</cargo.logging>
+                            <cargo.logging>high</cargo.logging>
                         </properties>
                     </configuration>
                 </configuration>
